--- a/fieldtrips.html
+++ b/fieldtrips.html
@@ -167,7 +167,7 @@
 										
 										<div class="mySlides fade">
 										  <div class="numbertext">2 / 3</div>
-										  <img src="images/banner2.JPG" style="width:100%">
+										  <img src="images/banner2.jpg" style="width:100%">
 										  <div class="text">Caption Two</div>
 										</div>
 										
