--- a/gagnon_cv.html
+++ b/gagnon_cv.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Gagnon CV</title>
+		<title>Bio - Edeline Gagnon | Gagnon Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
 								</li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="teaching.html">Teaching</a></li>
-								<li><a href="prospectives.html">Prospectives</a></li>
+								<li><a href="prospectives.html">Join</a></li>
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="fieldtrips.html">Field Trips</a></li>
 
@@ -54,25 +54,23 @@
 							<!-- Content -->
 
 								<article>
+
+
+									<img src="images/profile_pics/profile_EG2.png" style="float:left; margin-right: 1.0em;" width="400" height="420" />
+
 									<header>
 										
+										<h2>Edeline Gagnon</h2>
 									</header>
+	
+									<p>As an undergraduate student, I discovered a passion for plants and botany at McGill University (2004-2008). I notably had the opportunity to discovery the huge diversity of plants through various field courses and internships, including in northern Quebec (Schefferville), the Rocky Mountains, Barbados, and the Fairchild Tropical Botanic Garden (Miami, USA). 
+									This encouraged me to pursue I pursued a Msc-PhD at the University of Montreal, in Canada (2009-2015). Based at the Botanic Garden of Montreal (IRBV), I studied plant systematics and evolutionary ecology in the Legume Family, under the co-supervision of Dr. Anne Bruneau, Dr. Gwilym P. Lewis (Kew Royal Botanic Gardens) and Dr. Colin E. Hughes (University of Zurich). 
+									My PhD led led me to describe 5 new plant genera and explore phylogenomic biome conservatism in the Caesalpinia Group, a pantropical group of plants with an affinity for seasonally dry forests and deserts. 
+									<br><br>After a short academic hiatus, I worked for a year as a non-tenure professor at the University of Moncton in New-Brunswick, Canada (2017-2018). I then obtained a FQRNT fellowship to start a postdoc at the Royal Botanical Garden of Edinburgh/University of Edinburgh (2018-2021). There I focused on the phylogenomics of the mega-diverse genus <i>Solanum</i> L. (1240 spp.), and studied niche evolution with regards to different types of underground growth forms (including tubers and rhizomes) across the genus. 
+									<br><br>Capitalizing on my experience of natural history collections and experience in phylogenomics, I obtained a MSCA EuroTech2 Postdoc to work at the Technical University in Munich in Germany (2022-2023). I am currently investigating whether herbarium specimens can be used to study the diversity and evolution of resistance genes in <i>Solanum chilense</i>, a wild crop relative of tomato. 
+									<br><br>I am currently establishing my lab at the University of Guelph (starting May 2023), focusing on the evolution and adaptation of non-model plant species to different environments. I am particularly interested in wild crop relatives in the genus <i>Solanum</i>, and questions about adaptation to arid environments. </p>
 
-
-									<img src="images/pic04.jpg" style="float:left; margin-right: 0.6em;" width="190" height="190" />
-
-									<h2>Edeline Gagnon</h2>
-									<p>All content, all the time.</p>
-
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
-
-									<h3>Leguminosae</h3>
-									<p>Here I will describe my research on the Caesalpinia Group.</p>
-
-									<p>I will include comments about most important publications</p>
+									<p>My full academic CV is available for download <a href="https://drive.google.com/file/d/1gvEgnu3H6XWi2UcPT5zI3ioIMfvgXGuP/view?usp=sharing">here</a>.</p>
 								</article>
 
 						</div>
