--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Gagnon lab</title>
+		<title>Welcome | Gagnon Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Plant Diversity and Evolution <br><em>Gagnon Lab @ <a href="https://www.uoguelph.ca/ib/edelinegagnon">UofGuelph</em></a></a></h1>
+						<h1><a href="index.html" id="logo">Gagnon Lab  <a href="https://www.uoguelph.ca/ib/edelinegagnon">@ UofGuelph</em></a></a></h1>
 						
 					<!-- Nav -->
 						<nav id="nav">
@@ -34,7 +34,7 @@
 								</li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="teaching.html">Teaching</a></li>
-								<li><a href="prospectives.html">Prospectives</a></li>
+								<li><a href="prospectives.html">Join</a></li>
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="fieldtrips.html">Field Trips</a></li>
 
@@ -47,8 +47,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2><em>Studying plant diversity and how it adapt to different environments</a></em></h2>
-						<a href="#" class="button">Our Research</a>
+						<h2>Studying plant diversity and evolution </a></h2>
+						<a href="research.html" class="button">Our Research</a>
 					</header>
 				</section>
 
@@ -57,56 +57,16 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>A gigantic heading you can use for whatever</h2>
-							<p>Paragraph about what we do</p>
-							<p>Interested in joining the lab? Click here for more information on how to apply</p>
-						</header>
-					</div>
-				</section>
+							<p> Our lab focuses on describing and understanding the biodiversity of plants, by studying their evolutionary histories, and how they diversified and adapted to different environments.
 
-			<!-- Posts -->
-				<section class="wrapper style1">
-					<div class="container">
-						<div class="row">
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-						</div>
-						<div class="row">
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-						</div>
+							<br>
+								<br>We integrate different research disciplines, including taxonomy, phylogenetics, ecology, evolution, biogeography and genomics. 
+								We use data from the field, from molecular laboratories, from natural history collections, and from online biodiversity databases to address questions of importance for conservation, evolution and ecology.
+								We also tend to focus on large groups of economically important plants, including the Solanaceae (tomato family) and Leguminosae (pea family).
+								
+								</p>
+							<p>Interested in joining the lab? <a href="prospectives.html">Click here </a>for more information.</p>
+						</header>
 					</div>
 				</section>
 
@@ -120,10 +80,9 @@
 
 					<!-- Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://twitter.com/EdelineGagnon" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/edgagnon" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/edeline-gagnon-9bb0004b/?originalSubdomain=de" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						</ul>
 
 					<!-- Copyright -->
