--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Arcana by HTML5 UP</title>
+		<title>Research Interests | Gagnon Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
 								</li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="teaching.html">Teaching</a></li>
-								<li><a href="prospectives.html">Prospectives</a></li>
+								<li><a href="prospectives.html">Join</a></li>
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="fieldtrips.html">Field Trips</a></li>
 
@@ -61,24 +61,30 @@
 
 								<article>
 									<header>
-										<h2>Research interests</h2>
-										<p>All content, all the time.</p>
+										<p>Under Construction.</p>
 									</header>
 
-									<span class="image featured"><img src="images/Caesalpinia_(Tara)_spinosa_CEH3043_flowers02.JPG" alt="" /></span>
 
-
-									<img src="images/pic01.jpg" style="float:left" width="190" height="84" />
-
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
+									<img src="images/pic01.jpg" style="float:left" width="190" height="150" />
 
 									<h3>Leguminosae</h3>
-									<p>Here I will describe my research on the Caesalpinia Group.</p>
+									<p>More to come soon</p>
+									<br>
 
-									<p>I will include comments about most important publications</p>
+									<img src="images/pic01.jpg" style="float:left" width="190" height="150" />
+
+									<h3>Solanaceae</h3>
+									<p>More to come soon</p>
+									<br>
+
+
+									<img src="images/pic01.jpg" style="float:left" width="190" height="150" />
+
+									<h3>Trait evolution</h3>
+									<p>More to come soon</p>
+									<br>
+
+
 								</article>
 
 						</div>
