--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Arcana by HTML5 UP</title>
+		<title>Resources | Gagnon Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
 								</li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="teaching.html">Teaching</a></li>
-								<li><a href="prospectives.html">Prospectives</a></li>
+								<li><a href="prospectives.html">Join</a></li>
 								<li class="current"><a href="resources.html">Resources</a></li>
 								<li><a href="fieldtrips.html">Field Trips</a></li>
 
@@ -59,14 +59,14 @@
 										<p>Useful links for research and teaching</p>
 									</header>
 
-									<h3>Equity, Diversity and Inclusion</h3>
-									<p>Post relevant links</p>
+									<h3>Equity, Diversity and Inclusion (EDI)</h3>
+									<p><a href="https://www.uoguelph.ca/ib/EDI_StatementPost">EDI statement of the University of Guelph</a> </p>
 
 									<h3>How to prepare a presentation</h3>
-									<p>Here I will describe my research on the Caesalpinia Group.</p>
+									<p>Under construction.</p>
 
 									<h3>How to write a scientific article</h3>
-									<h3>How t</p>
+									<p>Under construction.</p>
 
 										
 
