--- a/teaching.html
+++ b/teaching.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Arcana by HTML5 UP</title>
+		<title>Teaching | Gagnon Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
 								</li>
 								<li><a href="publications.html">Publications</a></li>
 								<li class="current"><a href="teaching.html">Teaching</a></li>
-								<li><a href="prospectives.html">Prospectives</a></li>
+								<li><a href="prospectives.html">Join</a></li>
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="fieldtrips.html">Field Trips</a></li>
 
@@ -56,14 +56,50 @@
 								<article>
 									<header>
 										<h2>Teaching</h2>
-										<p>All content, all the time.</p>
+										<p>Starting September 2024, I will be teaching courses related to plant systematics, identification and evolution at the University of Guelph.
+											
+										</p>
+										<p>Below is a list of past teaching experiences for graduate and undergraduate courses:
+											
+										</p>
 									</header>
 
-									<h3>University of Moncton (2017-2018)</h3>
-									<p>List of courses at Moncton</p>
+									<h3>Royal Botanic Garden Edinburgh, Scotland, United Kingdom </h3>
+									<p>
+										2019–2021&nbsp;&nbsp;&nbsp;&nbsp;Seminar presentation “Taxonomy & Collections: An example of a 21st century taxonomic monograph” - Msc on Biodiversity and Plant Taxonomy (given 3 times);
+										<br>2020&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Teaching assistant for  “Identification of Tropical Plant families in Colombia” - Field course, Msc on Biodiversity and Plant Taxonomy;
+										<br>2019&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Seminar presentation for “Phylogenetics: Comparative evolution of geophytes in Solanum & Begonia” -  Msc on Biodiversity and Plant Taxonomy; 
+										<br>
 
-									<h3>University of Montreal (2017-2018)</h3>
-									<p>List of courses at Moncton</p>
+
+									<h3>University of Moncton, New Brunswick, Canada </h3>
+									<p>
+										2018&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lecturer for “Biostatistics” (3 cr. + 1 cr. of lab);
+									<br>2017&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lecturer for “Botany” (3 cr. + 1 cr. of lab);
+									<br>2017&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lecturer for “Plant systematics” (3 cr. + 1 cr. of lab);
+									<br>2017&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lecturer for “Field course in ecology” (1 of 3 credits, responsable for the plant ecology section);
+
+									</p>
+
+									<h3>University of Montreal, Quebec, Canada</h3>
+									<p>
+										2016&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lecturer for “Horticulure”. Faculté de l’Aménagement, University of Montreal, Canada.
+									<br>2015–2016&nbsp;&nbsp;&nbsp;&nbsp;Teaching assistant for APA-1210 “Connaissance des végétaux”. Faculté de l’aménagement;
+									<br>-	Participated in elaborating an interactive identification key for plant families http://amelab.umontreal.ca/lucid/clesplantes/familles/;
+									<br>2015&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Teaching assistant for BIO-3753 “Stage d’écologie végétale”;
+									<br>2014&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Teaching assistant for BIO-6245 “Méthodes en analyses phylogénétique”;
+									<br>2013&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Teaching assistant for BIO-2306 “Floristique du Québec”; 
+									<br>2011&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Teaching assistant for BIO-6245 “Méthodes en analyses phylogénétique”;
+
+								</p>
+
+									<h3>McGill University, Quebec, Canada </h3>
+									<p>
+									2010&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Teaching assistant for BIOL-645 “Biodiversity Science Summer School”;
+									<br>2009&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Teaching assistant for PLNT-458 “Flowering Plant Systematics”;
+									<br>2008&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Teaching assistant for PLNT-358 “Flowering Plant Diversity”.
+
+									</p>
 								</article>
 
 						</div>
