--- a/gagnon_cv.html
+++ b/gagnon_cv.html
@@ -56,7 +56,7 @@
 								<article>
 
 
-									<img src="images/profile_pics/profile_EG2.png" style="float:left; margin-right: 1.0em;" width="400" height="420" />
+									<img src="images/profile_pics/profile_EG2.jpg" style="float:left; margin-right: 1.0em;" width="400" height="420" />
 
 									<header>
 										
