--- a/prospectives.html
+++ b/prospectives.html
@@ -59,9 +59,7 @@
 										<h2>Prospective Members</h2>
 										<p>Information about how to join the lab!</p>
 									</header>
-									<p>I will be announcing future available positions on this page.</p>
-
-									<p>At the moment, I am keen to hire and develop research projects with students and postdoctoral researchers. I am happy to discuss potential research projects, and identify and support your applications for various sources of fundings. The good news is that there are several opportunities that exist at the University of Guelph (<b><a href="https://www.uoguelph.ca/ib/scholarships_awards">see this page for awards</a></b>, and <b><a href="https://www.uoguelph.ca/registrar/studentfinance/scholarships/index?scholarships%2Findex=">this page for scholarships</a></b>), as well as in Canada.
+									<p>I am keen to hire and develop research projects with students and postdoctoral researchers. I am happy to discuss potential research projects, and identify and support your applications for various sources of fundings. The good news is that there are several opportunities that exist at the University of Guelph (<b><a href="https://www.uoguelph.ca/ib/scholarships_awards">see this page for awards</a></b>, and <b><a href="https://www.uoguelph.ca/registrar/studentfinance/scholarships/index?scholarships%2Findex=">this page for scholarships</a></b>), as well as in Canada.
 									</p>
 
 									<p>To approach me, please send a <b>SHORT email</b> outlining your research interests, experience and why you are interested in joining the lab. <b>Please suggest potential sources of funding</b> to support your studies (see below).
@@ -91,7 +89,7 @@
 									</p>
 
 									<h3>Graduate students</h3>
-									<p> <b><a href="https://graduatestudies.uoguelph.ca/programs/ibio">Integrative Biology Graduate and Postdoctoral Studies</a></b>: Information about our program, how and when to apply</p>
+									<p> <b><a href="https://graduatestudies.uoguelph.ca/programs/ibio">Integrative Biology Graduate and Postdoctoral Studies</a></b>: Information about our program, how and when to apply.</p>
 
 									<p>December 1st: deadline to apply for an <b><a href="https://www.nserc-crsng.gc.ca/students-etudiants/pg-cs/cgsm-bescm_eng.asp">NSERC CGS-M Master’s Scholarship</b></a>. Would need to apply in the year before starting (with my help).
 									</p>
@@ -127,7 +125,7 @@
 										
 									</p>
 
-									<p>Early November: Deadline for the <b><a href="http://liberero.ca/">LIBER ERO fellowship program</a></b>, for research ECR conducting world-class research informing conservation and management issues relevant to Canada.
+									<p>Early November: Deadline for the <b><a href="http://liberero.ca/">LIBER ERO fellowship program</a></b>, for ECR conducting world-class research informing conservation and management issues relevant to Canada.
 										
 									</p>
 
