--- a/prospectives.html
+++ b/prospectives.html
@@ -59,7 +59,7 @@
 										<h2>Prospective Members</h2>
 										<p>Information about how to join the lab!</p>
 									</header>
-									<p>I am keen to hire and develop research projects with students and postdoctoral researchers. I am happy to discuss potential research projects, and identify and support your applications for various sources of fundings. The good news is that there are several opportunities that exist at the University of Guelph (<b><a href="https://www.uoguelph.ca/ib/scholarships_awards">see this page for awards</a></b>, and <b><a href="https://www.uoguelph.ca/registrar/studentfinance/scholarships/index?scholarships%2Findex=">this page for scholarships</a></b>), as well as in Canada.
+									<p>I am keen to hire and develop research projects with students and postdoctoral researchers. I am happy to discuss potential research projects, and identify and support your applications for various sources of fundings. There are many opportunities at the University of Guelph (<b><a href="https://www.uoguelph.ca/ib/scholarships_awards">see this page for awards</a></b>, and <b><a href="https://www.uoguelph.ca/registrar/studentfinance/scholarships/index?scholarships%2Findex=">this page for scholarships</a></b>), as well as in Canada.
 									</p>
 
 									<p>To approach me, please send a <b>SHORT email</b> outlining your research interests, experience and why you are interested in joining the lab. <b>Please suggest potential sources of funding</b> to support your studies (see below).
